<resources>
    <string name="app_name">Habitizer</string>
    <string name="end_routine">End Routine</string>
    <string name="routine_total_time_format">%d of %dm</string>
    <string name="routine_total_set_time_format">%dm</string>
    <string name="async">Time Since Last Checked Off Task: %dm</string>
    <string name="task_time_string_format">[%d m]</string>
    <string name="default_goal_time">90</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="routine_complete">Routine complete!</string>
    <string name="routine_paused">Resume</string>
    <string name="routine_unpaused">Pause</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="debug_start_routine">Debug Start Routine</string>
    <string name="start">Start</string>
    <string name="debug_pause_play">Debug Pause/Play</string>
    <string name="debug_forward_30">Debug Forward 30</string>
    <string name="task_name">Task name...</string>
    <string name="routine_name">Routine name...</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="task_dialog_message">Please provide the new task name.</string>
    <string name="task_dialog_title">New Task</string>
    <string name="add_task">Add Task</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="task_empty_time">-</string>
    <string name="rename_task">Rename Task</string>
    <string name="enter_new_task_name">Enter new task name</string>
    <string name="rename">Rename</string>
    <string name="add_routine">Add Routine</string>
    <string name="routine_dialog_title">New Routine</string>
    <string name="routine_dialog_message">Please provide the new Routine name.</string>
</resources>