<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.taskview.TaskViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/run_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="pause_resume_button,end_routine_button,debug_tools,async_Timer"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/edit_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="add_task_button,edit_mode_text,edit_goal_time"
            tools:visibility="visible" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/async_Timer"
            app:title="Routine Name"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/routine_total_elapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/routine_total_time_format"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toStartOf="@+id/edit_goal_time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53" />

        <ImageButton
            android:id="@+id/edit_goal_time"
            android:layout_width="37dp"
            android:layout_height="37dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/edit_task_name" />

        <ListView
            android:id="@+id/task_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="100dp"
            app:layout_constraintBottom_toTopOf="@+id/pause_resume_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_mode_text"
            tools:listitem="@layout/list_item_task">

        </ListView>

        <androidx.cardview.widget.CardView
            android:id="@+id/debug_menu_card"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            app:contentPadding="4dp"
            app:layout_constraintBottom_toTopOf="@+id/debug_menu"
            app:layout_constraintEnd_toEndOf="@+id/debug_menu">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/debug_menu_info"
                android:name="edu.ucsd.cse110.habitizer.app.presentation.taskview.debug.TaskViewDebugFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_task_view_debug" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/debug_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="Debug Menu"
            app:layout_constraintBottom_toBottomOf="@+id/task_list_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--        <Button-->
        <!--            android:id="@+id/start_routine_button"-->
        <!--            android:layout_width="98dp"-->
        <!--            android:layout_height="55dp"-->
        <!--            android:contentDescription="@string/debug_start_routine"-->
        <!--            android:text="@string/start"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/toolbar"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/toolbar"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/toolbar" />-->

        <TextView
            android:id="@+id/async_Timer"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="Since Last Task: "
            android:textColor="#451D1D"
            app:layout_constraintBottom_toTopOf="@+id/task_list_view"
            app:layout_constraintEnd_toEndOf="@+id/edit_mode_text"
            app:layout_constraintStart_toStartOf="@+id/edit_mode_text"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/add_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_task"
            app:layout_constraintBottom_toBottomOf="@+id/task_list_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/edit_mode_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/edit_mode"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/pause_resume_button"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/routine_unpaused"
            app:layout_constraintBottom_toTopOf="@+id/end_routine_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/end_routine_button"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/end_routine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/back_to_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back_to_menu"
            app:layout_constraintBottom_toBottomOf="@+id/task_list_view"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/debug_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="debug_menu" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="139dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>